# course_7_habit_tracker

./: .env.sample  Dockerfile  dump.rdb  pyproject.toml  readme.md  requirements.txt
config/: celery.py  settings.py  urls.py
fixtures/: spa_data.json  users_data.json
spa/: models.py  paginators.py  serializers.py  tests.py  urls.py  validators.py  views.py
spa/migrations/: 0001_initial.py  0002_habit_last_execution_date.py
users/: models.py  permissions.py  services.py  tasks.py  urls.py  views.py
users/management/commands/: csu.py  start_my_task.py
users/migrations/: 0001_initial.py  0002_user_tg_id.py  0003_alter_user_tg_id.py
